UI improvements per Bhargavi's Feedback

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,3 +17,4 @@
 @import "./application/modules/map"
 @import "./application/modules/alert"
 @import "./application/modules/profile-tag"
+@import "./application/modules/empty-state"
