--- a/app/assets/stylesheets/application/modules/alert.sass
+++ b/app/assets/stylesheets/application/modules/alert.sass
@@ -1,6 +1,6 @@
 .alert
   padding: 10px
-  background-color: $soft-grey
+  background-color: $success
   border-radius: 3px
   text-align: center
   color: $white
