--- a/app/assets/stylesheets/application/modules/buttons.sass
+++ b/app/assets/stylesheets/application/modules/buttons.sass
@@ -12,6 +12,9 @@ input[type="submit"]
   -webkit-appearance: none
   &.primary
     background-color: $action-green
+  &.text
+    background-color: transparent
+    color: $soft-grey
 
 input[type="submit"]
   background-color: $action-green
