--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -16,13 +16,14 @@
     box-sizing: border-box
     width: 400px
     max-width: 100%
+    padding: 15px
     background-color: $light-grey
     border: none
     border-radius: 3px
     outline: none
     appearance: none
     line-height: 20px
-    padding: 15px
+    color: $dark-grey
 
   textarea
     min-height: 150px
