--- a/app/assets/stylesheets/application/modules/nav.sass
+++ b/app/assets/stylesheets/application/modules/nav.sass
@@ -14,7 +14,7 @@
     color: $soft-grey
     text-decoration: none
     cursor: pointer
-    &:hover
+    &.active, &:hover
       color: $white
     .fa
       margin-right: 8px
