--- a/app/assets/stylesheets/application/modules/header.sass
+++ b/app/assets/stylesheets/application/modules/header.sass
@@ -71,8 +71,13 @@
     position: absolute
     top: 0
     right: 0
-    line-height: 70px
-    padding: 0 20px
+    line-height: 30px
+    padding: 0 10px
+    margin: 20px
+    background-color: $blue
+    border-radius: 3px
+    font-weight: bold
+    color: $white
 
 @media (max-width: 720px)
   .header
