--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,11 +12,11 @@
         = link_to 'DASHOUS', root_path
         .mobile-nav
           - if current_user
-            = link_to offers_path, class: 'item' do
+            = link_to offers_path, class: "item #{'active' if @section == :offers}" do
               .fa.fa-usd.fa-lg
-            = link_to trade_requests_path, class: 'item' do
+            = link_to trade_requests_path, class: "item #{'active' if @section == :trade_requests}" do
               .fa.fa-street-view.fa-lg
-            = link_to account_index_path, class: 'item' do
+            = link_to account_index_path, class: "item #{'active' if @section == :account}" do
               .fa.fa-briefcase.fa-lg
           - else
             = link_to new_user_session_path, class: 'item' do
@@ -31,17 +31,17 @@
             %input(type="submit" value="")
             .fa.fa-search.fa-lg
       .price
-        Current Exchange:
+        1 Dash =
         = number_to_currency PriceService.current_price
     .nav
       - if current_user
-        = link_to offers_path, class: 'item' do
+        = link_to offers_path, class: "item #{'active' if @section == :offers}" do
           .fa.fa-usd.fa-lg
           My Offers
-        = link_to trade_requests_path, class: 'item' do
+        = link_to trade_requests_path, class: "item #{'active' if @section == :trade_requests}" do
           .fa.fa-street-view.fa-lg
           Trade Requests
-        = link_to account_index_path, class: 'item' do
+        = link_to account_index_path, class: "item #{'active' if @section == :account}" do
           .fa.fa-briefcase.fa-lg
           Account
       - else
