--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -10,6 +10,7 @@
 
 @import "./application/modules/header"
 @import "./application/modules/nav"
+@import "./application/modules/footer"
 
 @import "./application/modules/buttons"
 @import "./application/modules/forms"
