--- a/app/assets/stylesheets/application/modules/header.sass
+++ b/app/assets/stylesheets/application/modules/header.sass
@@ -117,5 +117,8 @@
           top: 5px
         .search-button .fa
           top: -11px
+
+@media (max-width: 830px)
+  .header
     .price
       display: none
