open github link in new tab

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -60,5 +60,5 @@
     .footer
       = link_to 'Terms and Conditions', '#'
       = link_to 'Privacy Policy', '#'
-      = link_to 'Github', 'https://github.com/brettclanton001/Dashous'
+      = link_to 'Github', 'https://github.com/brettclanton001/Dashous', target: '_blank'
       %span Dashous LLC
