--- a/app/assets/stylesheets/application/modules/footer.sass
+++ b/app/assets/stylesheets/application/modules/footer.sass
@@ -1,12 +1,10 @@
 .footer
-  box-sizing: border-box
-  height: 40px
-  padding: 0 0 0 180px
+  padding: 10px 0 10px 180px
   text-align: center
-  line-height: 40px
+  line-height: 30px
   & > a, & > span
     padding: 0 10px
 
 @media (max-width: 720px)
   .footer
-    padding: 0 10px
+    padding-left: 0
