--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -61,4 +61,5 @@
       = link_to 'Terms and Conditions', '#'
       = link_to 'Privacy Policy', '#'
       = link_to 'Github', 'https://github.com/brettclanton001/Dashous', target: '_blank'
+      = mail_to 'brett@dashous.com', 'Contact'
       %span Dashous LLC
