format the terms/privacy pages

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -58,8 +58,8 @@
       = yield
 
     .footer
-      = link_to 'Terms and Conditions', '#'
-      = link_to 'Privacy Policy', '#'
+      = link_to 'Terms and Conditions', terms_path
+      = link_to 'Privacy Policy', privacy_path
       = link_to 'Github', 'https://github.com/brettclanton001/Dashous', target: '_blank'
       = mail_to 'brett@dashous.com', 'Contact'
       %span Dashous LLC
