--- a/app/views/public/privacy.html.haml
+++ b/app/views/public/privacy.html.haml
@@ -1,69 +1,71 @@
-TEMPLATE PRIVACY STATEMENT
+%h1 Privacy Statement
 
-Your privacy is important to [NAME].  This privacy statement provides information about the personal information that [NAME] collects, and the ways in which [NAME] uses that personal information.
+%hr
 
-Personal information collection
+%p Your privacy is important to [NAME].  This privacy statement provides information about the personal information that [NAME] collects, and the ways in which [NAME] uses that personal information.
 
-[NAME] may collect and use the following kinds of personal information: 
+%h4 Personal information collection
 
-λ	[information about your use of this website (including [INSERT DETAILS]);] 
-λ	[information that you provide using for the purpose of registering with the website (including [INSERT DETAILS]);]
-λ	[information about transactions carried out over this website (including [INSERT DETAILS]);] 
-λ	[information that you provide for the purpose of subscribing to the website services (including [INSERT DETAILS]); and]
-λ	[any other information that you send to [NAME].]
+%p [NAME] may collect and use the following kinds of personal information: 
 
-Using personal information
+%ul
+  %li [information about your use of this website (including [INSERT DETAILS]);] 
+  %li [information that you provide using for the purpose of registering with the website (including [INSERT DETAILS]);]
+  %li [information about transactions carried out over this website (including [INSERT DETAILS]);] 
+  %li [information that you provide for the purpose of subscribing to the website services (including [INSERT DETAILS]); and]
+  %li [any other information that you send to [NAME].]
 
-[NAME] may use your personal information to: 
+%h4 Using personal information
 
-λ	[administer this website;]
-λ	[personalize the website for you;]
-λ	[enable your access to and use of the website services;]
-λ	[publish information about you on the website;]
-λ	[send to you products that you purchase;]
-λ	[supply to you services that you purchase;]
-λ	[send to you statements and invoices;]
-λ	[collect payments from you; and]
-λ	[send you marketing communications.]
+%p [NAME] may use your personal information to: 
 
-Where [NAME] discloses your personal information to its agents or sub-contractors for these purposes, the agent or sub-contractor in question will be obligated to use that personal information in accordance with the terms of this privacy statement. 
+%ul
+  %li [administer this website;]
+  %li [personalize the website for you;]
+  %li [enable your access to and use of the website services;]
+  %li [publish information about you on the website;]
+  %li [send to you products that you purchase;]
+  %li [supply to you services that you purchase;]
+  %li [send to you statements and invoices;]
+  %li [collect payments from you; and]
+  %li [send you marketing communications.]
 
-In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, [NAME] may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings, and in order to establish, exercise or defend its legal rights.
+%p Where [NAME] discloses your personal information to its agents or sub-contractors for these purposes, the agent or sub-contractor in question will be obligated to use that personal information in accordance with the terms of this privacy statement. 
 
-Securing your data
+%p In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, [NAME] may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings, and in order to establish, exercise or defend its legal rights.
 
-[NAME] will take reasonable technical and organisational precautions to prevent the loss, misuse or alteration of your personal information. 
+%h4 Securing your data
 
-[NAME] will store all the personal information you provide [on its secure servers]. 
+%p [NAME] will take reasonable technical and organizational precautions to prevent the loss, misuse or alteration of your personal information. 
 
-[Information relating to electronic transactions entered into via this website will be protected by encryption technology.]
+%p [NAME] will store all the personal information you provide [on its secure servers]. 
 
-Cross-border data transfers
+%p [Information relating to electronic transactions entered into via this website will be protected by encryption technology.]
 
-Information that [NAME] collects may be stored and processed in and transferred between any of the countries in which [NAME] operates to enable the use of the information in accordance with this privacy policy.
+%h4 Cross-border data transfers
 
-[In addition, personal information that you submit for publication on the website will be published on the internet and may be available around the world.]
+%p Information that [NAME] collects may be stored and processed in and transferred between any of the countries in which [NAME] operates to enable the use of the information in accordance with this privacy policy.
 
-You agree to such cross-border transfers of personal information.
+%p [In addition, personal information that you submit for publication on the website will be published on the internet and may be available around the world.]
 
-Updating this statement
+%p You agree to such cross-border transfers of personal information.
 
-[NAME] may update this privacy policy by posting a new version on this website.  
+%h4 Updating this statement
 
-You should check this page occasionally to ensure you are familiar with any changes.  
+%p [NAME] may update this privacy policy by posting a new version on this website.  
 
-Other websites
+%p You should check this page occasionally to ensure you are familiar with any changes.  
 
-This website contains links to other websites.  
+%h4 Other websites
 
-[NAME] is not responsible for the privacy policies or practices of any third party.
+%p This website contains links to other websites.  
 
-Contact [NAME]
+%p [NAME] is not responsible for the privacy policies or practices of any third party.
 
-If you have any questions about this privacy policy or [NAME'S] treatment of your personal information, please write:
+%h4 Contact [NAME]
 
-λ	by email to [EMAIL ADDRESS]; or 
-λ	by post to [POSTAL ADDRESS].
+%p If you have any questions about this privacy policy or [NAME'S] treatment of your personal information, please write:
 
-
-
+%ul
+  %li by email to [EMAIL ADDRESS]; or 
+  %li by post to [POSTAL ADDRESS].
