--- a/app/assets/stylesheets/application/typography.sass
+++ b/app/assets/stylesheets/application/typography.sass
@@ -15,9 +15,15 @@ a, .link
     color: darken($blue, 30%)
 
 h1, h2, h3, h4, h5, h6
+  line-height: 1.2em
+
+h1, h2
   font-weight: normal
   margin: 10px 0 20px
-  line-height: 1.2em
+
+h3, h4, h5, h6
+  font-weight: bold
+  margin: 20px 0
 
 h1
   font-size: 24px
