--- a/app/views/public/terms.html.haml
+++ b/app/views/public/terms.html.haml
@@ -6,15 +6,15 @@
 
 %p These terms and conditions govern your use of this website; by using this website, you accept these terms and conditions in full.   If you disagree with these terms and conditions or any part of these terms and conditions, you must not use this website. 
 
-%p [You must be at least [18] years of age to use this website.  By using this website [and by agreeing to these terms and conditions] you warrant and represent that you are at least [18] years of age.]
+%p You must be at least 18 years of age to use this website.  By using this website you warrant and represent that you are at least 18 years of age.
 
-%p [This website uses cookies.  By using this website and agreeing to these terms and conditions, you consent to our [NAME]'s use of cookies in accordance with the terms of [NAME]'s [privacy policy / cookies policy].]
+%p This website uses cookies.  By using this website and agreeing to these terms and conditions, you consent to our Dashous's use of cookies in accordance with the terms of Dashous's privacy policy.
 
 %h4 License to use website
 
-%p Unless otherwise stated, [NAME] and/or its licensors own the intellectual property rights in the website and material on the website.  Subject to the license below, all these intellectual property rights are reserved.
+%p Unless otherwise stated, Dashous and/or its licensors own the intellectual property rights in the website and material on the website.  Subject to the license below, all these intellectual property rights are reserved.
 
-%p You may view, download for caching purposes only, and print pages [or [OTHER CONTENT]] from the website for your own personal use, subject to the restrictions set out below and elsewhere in these terms and conditions.  
+%p You may view, download for caching purposes only, and print pages from the website for your own personal use, subject to the restrictions set out below and elsewhere in these terms and conditions.  
 
 %p You must not:
 
@@ -22,11 +22,7 @@
   %li republish material from this website (including republication on another website);
   %li sell, rent or sub-license material from the website;
   %li show any material from the website in public;
-  %li reproduce, duplicate, copy or otherwise exploit material on this website for a commercial purpose;]
-  %li [edit or otherwise modify any material on the website; or]
-  %li [redistribute material from this website [except for content specifically and expressly made available for redistribution].]
-
-%p [Where content is specifically made available for redistribution, it may only be redistributed [within your organization].]
+  %li reproduce, duplicate, copy or otherwise exploit material on this website for a commercial purpose;
 
 %h4 Acceptable use
 
@@ -34,65 +30,65 @@
 
 %p You must not use this website to copy, store, host, transmit, send, use, publish or distribute any material which consists of (or is linked to) any spyware, computer virus, Trojan horse, worm, keystroke logger, rootkit or other malicious computer software.
 
-%p You must not conduct any systematic or automated data collection activities (including without limitation scraping, data mining, data extraction and data harvesting) on or in relation to this website without [NAME'S] express written consent.
+%p You must not conduct any systematic or automated data collection activities (including without limitation scraping, data mining, data extraction and data harvesting) on or in relation to this website without Dashous's express written consent.
 
-%p [You must not use this website to transmit or send unsolicited commercial communications.]
+%p You must not use this website to transmit or send unsolicited commercial communications.
 
-%p [You must not use this website for any purposes related to marketing without [NAME'S] express written consent.]  
+%p You must not use this website for any purposes related to marketing without Dashous's express written consent.
 
-%h4 [Restricted access
+%h4 Restricted access
 
-%p [Access to certain areas of this website is restricted.]  [NAME] reserves the right to restrict access to [other] areas of this website, or indeed this entire website, at [NAME'S] discretion.
+%p Access to certain areas of this website is restricted.  Dashous reserves the right to restrict access to other areas of this website, or indeed this entire website, at Dashous's discretion.
 
-%p If [NAME] provides you with a user ID and password to enable you to access restricted areas of this website or other content or services, you must ensure that the user ID and password are kept confidential.  
+%p If Dashous provides you with a username and password to enable you to access restricted areas of this website or other content or services, you must ensure that the username and password are kept confidential.  
 
-%p [[NAME] may disable your user ID and password in [NAME'S] sole discretion without notice or explanation.]
+%p Dashous may disable your username and password in Dashous's sole discretion without notice or explanation.
 
-%h4 [User content
+%h4 User content
 
 %p In these terms and conditions, “your user content” means material (including without limitation text, images, audio material, video material and audio-visual material) that you submit to this website, for whatever purpose.
 
-%p You grant to [NAME] a worldwide, irrevocable, non-exclusive, royalty-free license to use, reproduce, adapt, publish, translate and distribute your user content in any existing or future media.  You also grant to [NAME] the right to sub-license these rights, and the right to bring an action for infringement of these rights.
+%p You grant to Dashous a worldwide, irrevocable, non-exclusive, royalty-free license to use, reproduce, adapt, publish, translate and distribute your user content in any existing or future media.  You also grant to Dashous the right to sub-license these rights, and the right to bring an action for infringement of these rights.
 
-%p Your user content must not be illegal or unlawful, must not infringe any third party's legal rights, and must not be capable of giving rise to legal action whether against you or [NAME] or a third party (in each case under any applicable law).  
+%p Your user content must not be illegal or unlawful, must not infringe any third party's legal rights, and must not be capable of giving rise to legal action whether against you or Dashous or a third party (in each case under any applicable law).  
 
 %p You must not submit any user content to the website that is or has ever been the subject of any threatened or actual legal proceedings or other similar complaint.
 
-%p [NAME] reserves the right to edit or remove any material submitted to this website, or stored on [NAME'S] servers, or hosted or published upon this website.
+%p Dashous reserves the right to edit or remove any material submitted to this website, or stored on Dashous's servers, or hosted or published upon this website.
 
-%p [Notwithstanding [NAME'S] rights under these terms and conditions in relation to user content, [NAME] does not undertake to monitor the submission of such content to, or the publication of such content on, this website.]
+%p Notwithstanding Dashous's rights under these terms and conditions in relation to user content, Dashous does not undertake to monitor the submission of such content to, or the publication of such content on, this website.
 
 %h4 No warranties
 
-%p This website is provided “as is” without any representations or warranties, express or implied.  [NAME] makes no representations or warranties in relation to this website or the information and materials provided on this website.  
+%p This website is provided “as is” without any representations or warranties, express or implied.  Dashous makes no representations or warranties in relation to this website or the information and materials provided on this website.  
 
-%p Without prejudice to the generality of the foregoing paragraph, [NAME] does not warrant that:
+%p Without prejudice to the generality of the foregoing paragraph, Dashous does not warrant that:
 
 %ul
   %li this website will be constantly available, or available at all; or
   %li the information on this website is complete, true, accurate or non-misleading.
 
-%p Nothing on this website constitutes, or is meant to constitute, advice of any kind.  [If you require advice in relation to any [legal, financial or medical] matter you should consult an appropriate professional.]
+%p Nothing on this website constitutes, or is meant to constitute, advice of any kind.  If you require advice in relation to any legal or financial matter you should consult an appropriate professional.
 
 %h4 Limitations of liability
 
-%p [NAME] will not be liable to you (whether under the law of contact, the law of torts or otherwise) in relation to the contents of, or use of, or otherwise in connection with, this website:
+%p Dashous will not be liable to you (whether under the law of contact, the law of torts or otherwise) in relation to the contents of, or use of, or otherwise in connection with, this website:
 
 %ul
-  %li [to the extent that the website is provided free-of-charge, for any direct loss;]
+  %li to the extent that the website is provided free-of-charge, for any direct loss;
   %li for any indirect, special or consequential loss; or
   %li for any business losses, loss of revenue, income, profits or anticipated savings, loss of contracts or business relationships, loss of reputation or goodwill, or loss or corruption of information or data.
 
-%p These limitations of liability apply even if [NAME] has been expressly advised of the potential loss.
+%p These limitations of liability apply even if Dashous has been expressly advised of the potential loss.
 
 %h4 Exceptions
 
-%p Nothing in these terms and conditions will exclude or limit any warranty implied by law that it would be unlawful to exclude or limit; and nothing in the terms and conditions will exclude or limit [NAME'S] liability in respect of any:
+%p Nothing in these terms and conditions will exclude or limit any warranty implied by law that it would be unlawful to exclude or limit; and nothing in the terms and conditions will exclude or limit Dashous's liability in respect of any:
 
 %ul
-  %li death or personal injury caused by [NAME'S] negligence;
-  %li fraud or fraudulent misrepresentation on the part of [NAME]; or
-  %li matter which it would be illegal or unlawful for [NAME] to exclude or limit, or to attempt or purport to exclude or limit, its liability. 
+  %li death or personal injury caused by Dashous's negligence;
+  %li fraud or fraudulent misrepresentation on the part of Dashous; or
+  %li matter which it would be illegal or unlawful for Dashous to exclude or limit, or to attempt or purport to exclude or limit, its liability. 
 
 %h4 Reasonableness
 
@@ -102,9 +98,9 @@
 
 %h4 Other parties
 
-%p [You accept that, as a limited liability entity, [NAME] has an interest in limiting the personal liability of its officers and employees.  You agree that you will not bring any claim personally against [NAME'S] officers or employees in respect of any losses you suffer in connection with the website.]
+%p You accept that, as a limited liability entity, Dashous has an interest in limiting the personal liability of its officers and employees.  You agree that you will not bring any claim personally against Dashous's officers or employees in respect of any losses you suffer in connection with the website.
 
-%p [Without prejudice to the foregoing paragraph,] you agree that the limitations of warranties and liability set out in this website disclaimer will protect [NAME'S] officers, employees, agents, subsidiaries, successors, assigns and sub-contractors as well as [NAME]. 
+%p Without prejudice to the foregoing paragraph, you agree that the limitations of warranties and liability set out in this website disclaimer will protect Dashous's officers, employees, agents, subsidiaries, successors, assigns and sub-contractors as well as Dashous. 
 
 %h4 Unenforceable provisions
 
@@ -112,19 +108,19 @@
 
 %h4 Indemnity
 
-%p You hereby indemnify [NAME] and undertake to keep [NAME] indemnified against any losses, damages, costs, liabilities and expenses (including without limitation legal expenses and any amounts paid by [NAME] to a third party in settlement of a claim or dispute on the advice of [NAME'S] legal advisers) incurred or suffered by [NAME] arising out of any breach by you of any provision of these terms and conditions[, or arising out of any claim that you have breached any provision of these terms and conditions].
+%p You hereby indemnify Dashous and undertake to keep Dashous indemnified against any losses, damages, costs, liabilities and expenses (including without limitation legal expenses and any amounts paid by Dashous to a third party in settlement of a claim or dispute on the advice of Dashous's legal advisers) incurred or suffered by Dashous arising out of any breach by you of any provision of these terms and conditions.
 
 %h4 Breaches of these terms and conditions
 
-%p Without prejudice to [NAME'S] other rights under these terms and conditions, if you breach these terms and conditions in any way, [NAME] may take such action as [NAME] deems appropriate to deal with the breach, including suspending your access to the website, prohibiting you from accessing the website, blocking computers using your IP address from accessing the website, contacting your internet service provider to request that they block your access to the website and/or bringing court proceedings against you.
+%p Without prejudice to Dashous's other rights under these terms and conditions, if you breach these terms and conditions in any way, Dashous may take such action as Dashous deems appropriate to deal with the breach, including suspending your access to the website, prohibiting you from accessing the website, blocking computers using your IP address from accessing the website, contacting your internet service provider to request that they block your access to the website and/or bringing court proceedings against you.
 
 %h4 Variation
 
-%p [NAME] may revise these terms and conditions from time-to-time.  Revised terms and conditions will apply to the use of this website from the date of the publication of the revised terms and conditions on this website.  Please check this page regularly to ensure you are familiar with the current version.
+%p Dashous may revise these terms and conditions from time-to-time.  Revised terms and conditions will apply to the use of this website from the date of the publication of the revised terms and conditions on this website.  Please check this page regularly to ensure you are familiar with the current version.
 
 %h4 Assignment
 
-%p [NAME] may transfer, sub-contract or otherwise deal with [NAME'S] rights and/or obligations under these terms and conditions without notifying you or obtaining your consent.
+%p Dashous may transfer, sub-contract or otherwise deal with Dashous's rights and/or obligations under these terms and conditions without notifying you or obtaining your consent.
 
 %p You may not transfer, sub-contract or otherwise deal with your rights and/or obligations under these terms and conditions.  
 
@@ -134,30 +130,17 @@
 
 %h4 Entire agreement
 
-%p These terms and conditions [, together with [DOCUMENTS],] constitute the entire agreement between you and [NAME] in relation to your use of this website, and supersede all previous agreements in respect of your use of this website.
+%p These terms and conditions constitute the entire agreement between you and Dashous in relation to your use of this website, and supersede all previous agreements in respect of your use of this website.
 
 %h4 Law and jurisdiction
 
-%p These terms and conditions will be governed by and construed in accordance with [GOVERNING LAW], and any disputes relating to these terms and conditions will be subject to the [non-]exclusive jurisdiction of the courts of [JURISDICTION].
+%p These terms and conditions will be governed by and construed in accordance with U.S. Law, and any disputes relating to these terms and conditions will be subject to the exclusive jurisdiction of the courts of the state of South Carolina.
 
-%h4 [Registrations and authorizations
+%h4 Dashous's details
 
-%p [[NAME] is registered with [TRADE REGISTER].  You can find the online version of the register at [URL].  [NAME'S] registration number is [NUMBER].]
+%p The full name of Dashous is "Dashous LLC".   
 
-%p [[NAME] is subject to [AUTHORISATION SCHEME], which is supervised by [SUPERVISORY AUTHORITY].]
-
-%p [[NAME] is registered with [PROFESSIONAL BODY].  [NAME'S] professional title is [TITLE] and it has been granted in the United Kingdom.  [NAME] is subject to the [RULES] which can be found at [URL].]
-
-%p [[NAME] subscribes to the following code[s] of conduct: [CODE(S) OF CONDUCT].  [These codes/this code] can be consulted electronically at [URL(S)].
-
-%p [[NAME'S] [TAX] number is [NUMBER].]]
-
-%h4 [NAME'S] details
-
-%p The full name of [NAME] is [FULL NAME].  
-
-%p [[NAME] is registered in [JURISDICTION] under registration number [NUMBER].]  
-
-%p [NAME'S] [registered] address is [ADDRESS].  
-
-%p You can contact [NAME] by email to [EMAIL].
+%p
+  You can contact Dashous by email to&nbsp;
+  %a( href="mailto:brett@dashous.com" )> brett@dashous.com
+  \.
