cleanup markup of terms and privacy

--- a/app/views/public/privacy.html.haml
+++ b/app/views/public/privacy.html.haml
@@ -2,69 +2,121 @@
 
 %hr
 
-%p Your privacy is important to Dashous.  This privacy statement provides information about the personal information that Dashous collects, and the ways in which Dashous uses that personal information.
+%p
+  Your privacy is important to Dashous.  This privacy statement provides
+  information about the personal information that Dashous collects, and the
+  ways in which Dashous uses that personal information.
 
 %h4 Personal information collection
 
-%p Dashous may collect and use the following kinds of personal information: 
+%p
+  Dashous may collect and use the following kinds of personal information:
 
 %ul
-  %li information about your use of this website (including Trade Requests viewed and Offers created, accepted or declined);
-  %li information that you provide using for the purpose of registering with the website (including email address and username);
-  %li information about transactions carried out over this website;
-  %li information that you provide for the purpose of subscribing to the website services; and
-  %li any other information that you send to Dashous.
+  %li
+    information about your use of this website (including Trade Requests viewed
+    and Offers created, accepted or declined);
+  %li
+    information that you provide using for the purpose of registering with the
+    website (including email address and username);
+  %li
+    information about transactions carried out over this website;
+  %li
+    information that you provide for the purpose of subscribing to the website
+    services; and
+  %li
+    any other information that you send to Dashous.
 
 %h4 Using personal information
 
-%p Dashous may use your personal information to: 
+%p
+  Dashous may use your personal information to:
 
 %ul
-  %li administer this website;
-  %li personalize the website for you;
-  %li enable your access to and use of the website services;
-  %li publish information about you on the website;
-  %li send to you products that you purchase;
-  %li supply to you services that you purchase;
-  %li send to you statements and invoices;
-  %li collect payments from you; and
-  %li send you marketing communications.
+  %li
+    administer this website;
+  %li
+    personalize the website for you;
+  %li
+    enable your access to and use of the website services;
+  %li
+    publish information about you on the website;
+  %li
+    send to you products that you purchase;
+  %li
+    supply to you services that you purchase;
+  %li
+    send to you statements and invoices;
+  %li
+    collect payments from you; and
+  %li
+    send you marketing communications.
 
-%p Where Dashous discloses your personal information to its agents or sub-contractors for these purposes, the agent or sub-contractor in question will be obligated to use that personal information in accordance with the terms of this privacy statement. 
+%p
+  Where Dashous discloses your personal information to its agents or
+  sub-contractors for these purposes, the agent or sub-contractor in question
+  will be obligated to use that personal information in accordance with the
+  terms of this privacy statement.
 
-%p In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, Dashous may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings, and in order to establish, exercise or defend its legal rights.
+%p
+  In addition to the disclosures reasonably necessary for the purposes
+  identified elsewhere above, Dashous may disclose your personal information to
+  the extent that it is required to do so by law, in connection with any legal
+  proceedings or prospective legal proceedings, and in order to establish,
+  exercise or defend its legal rights.
 
 %h4 Securing your data
 
-%p Dashous will take reasonable technical and organizational precautions to prevent the loss, misuse or alteration of your personal information. 
+%p
+  Dashous will take reasonable technical and organizational precautions to
+  prevent the loss, misuse or alteration of your personal information.
 
-%p Dashous will store all the personal information you provide [on its secure servers]. 
+%p
+  Dashous will store all the personal information you provide on its secure
+  servers.
 
-%p Information relating to electronic transactions entered into via this website will be protected by encryption technology.
+%p
+  Information relating to electronic transactions entered into via this website
+  will be protected by encryption technology.
 
 %h4 Cross-border data transfers
 
-%p Information that Dashous collects may be stored and processed in and transferred between any of the countries in which Dashous operates to enable the use of the information in accordance with this privacy policy.
+%p
+  Information that Dashous collects may be stored and processed in and
+  transferred between any of the countries in which Dashous operates to enable
+  the use of the information in accordance with this privacy policy.
 
-%p In addition, personal information that you submit for publication on the website will be published on the internet and may be available around the world.
+%p
+  In addition, personal information that you submit for publication on the
+  website will be published on the internet and may be available around the
+  world.
 
-%p You agree to such cross-border transfers of personal information.
+%p
+  You agree to such cross-border transfers of personal information.
 
 %h4 Updating this statement
 
-%p Dashous may update this privacy policy by posting a new version on this website.  
+%p
+  Dashous may update this privacy policy by posting a new version on this
+  website.
 
-%p You should check this page occasionally to ensure you are familiar with any changes.  
+%p
+  You should check this page occasionally to ensure you are familiar with any
+  changes.
 
 %h4 Other websites
 
-%p This website contains links to other websites.  
+%p
+  This website contains links to other websites.
 
-%p Dashous is not responsible for the privacy policies or practices of any third party.
+%p
+  Dashous is not responsible for the privacy policies or practices of any third
+  party.
 
 %h4 Contact Dashous
 
 %p
-  If you have any questions about this privacy policy or Dashous's treatment of your personal information, please write by email to&nbsp;
+  If you have any questions about this privacy policy or Dashous's treatment of
+  your personal information, please write by email to&nbsp;
   %a( href="mailto:brett@dashous.com" )> brett@dashous.com
   \.
