require terms and conditions to be accepted during signup

--- a/app/assets/stylesheets/application/modules/header.sass
+++ b/app/assets/stylesheets/application/modules/header.sass
@@ -30,6 +30,7 @@
       width: 460px
       max-width: 80%
       height: 50px
+      margin: 0
       overflow: hidden
       border-radius: 3px
       input[name="query"]
