--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -1,3 +1,5 @@
+form
+  margin: 20px 0
 
 .field
   margin-bottom: 20px
@@ -29,3 +31,16 @@
     min-height: 150px
     width: 500px
     resize: vertical
+
+  input[type="checkbox"],
+  input[type="radio"]
+    position: relative
+    top: -1px
+    margin-right: 5px
+
+.field_with_errors
+  display: inline
+
+#error_explanation
+  margin-bottom: 20px
+  color: $danger-red
