--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,27 @@
 %html
   %head
     %title Dashous
+
     = csrf_meta_tags
     %meta{content: 'width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0', name: 'viewport'}
+    %link{href: '/assets/favicons/apple-icon-57x57.png', rel: 'apple-touch-icon', sizes: '57x57'}
+    %link{href: '/assets/favicons/apple-icon-60x60.png', rel: 'apple-touch-icon', sizes: '60x60'}
+    %link{href: '/assets/favicons/apple-icon-72x72.png', rel: 'apple-touch-icon', sizes: '72x72'}
+    %link{href: '/assets/favicons/apple-icon-76x76.png', rel: 'apple-touch-icon', sizes: '76x76'}
+    %link{href: '/assets/favicons/apple-icon-114x114.png', rel: 'apple-touch-icon', sizes: '114x114'}
+    %link{href: '/assets/favicons/apple-icon-120x120.png', rel: 'apple-touch-icon', sizes: '120x120'}
+    %link{href: '/assets/favicons/apple-icon-144x144.png', rel: 'apple-touch-icon', sizes: '144x144'}
+    %link{href: '/assets/favicons/apple-icon-152x152.png', rel: 'apple-touch-icon', sizes: '152x152'}
+    %link{href: '/assets/favicons/apple-icon-180x180.png', rel: 'apple-touch-icon', sizes: '180x180'}
+    %link{href: '/assets/favicons/android-icon-192x192.png', rel: 'icon', sizes: '192x192', type: 'image/png'}
+    %link{href: '/assets/favicons/favicon-32x32.png', rel: 'icon', sizes: '32x32', type: 'image/png'}
+    %link{href: '/assets/favicons/favicon-96x96.png', rel: 'icon', sizes: '96x96', type: 'image/png'}
+    %link{href: '/assets/favicons/favicon-16x16.png', rel: 'icon', sizes: '16x16', type: 'image/png'}
+    %link{href: '/favicon_manifest.json', rel: 'manifest'}
+    %meta{content: '#ffffff', name: 'msapplication-TileColor'}
+    %meta{content: '/assets/favicons/ms-icon-144x144.png', name: 'msapplication-TileImage'}
+    %meta{content: '#ffffff', name: 'theme-color'}
+
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
