--- a/app/views/users/offers/index.html.haml
+++ b/app/views/users/offers/index.html.haml
@@ -5,7 +5,7 @@
 - if @offers.count.zero?
 
   .empty-state
-    .fa.fa-search.fa-5x
+    .fa.fa-usd.fa-5x
     %p Use the search tool (above) to find people that want to trade near you!
     %p Once you offer to trade with someone, you will see those offers here.
 
