styling for select

--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -14,7 +14,8 @@ form
   input[type="password"],
   input[type="number"],
   input[type="tel"],
-  textarea
+  textarea,
+  select
     box-sizing: border-box
     width: 400px
     max-width: 100%
@@ -37,6 +38,9 @@ form
     position: relative
     top: -1px
     margin-right: 5px
+
+  select
+    cursor: pointer
 
 .field_with_errors
   display: inline
