--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -80,5 +80,6 @@
       = link_to 'Terms and Conditions', terms_path
       = link_to 'Privacy Policy', privacy_path
       = link_to 'Github', 'https://github.com/brettclanton001/Dashous', target: '_blank'
+      = link_to 'Reddit', 'https://www.reddit.com/r/dashous', target: '_blank'
       = mail_to 'brett@dashous.com', 'Contact'
       %span Dashous LLC
