--- a/app/assets/stylesheets/application/modules/forms.sass
+++ b/app/assets/stylesheets/application/modules/forms.sass
@@ -42,6 +42,11 @@ form
   select
     cursor: pointer
 
+  input[readonly="readonly"]
+    text-align: center
+    font-family: monospace
+    cursor: text
+
 .field_with_errors
   display: inline
 
