--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,7 +51,7 @@
             .fa.fa-search.fa-lg
         .price
           %span.price-description 1 Dash =
-          = number_to_currency PriceService.current_price
+          = number_to_currency ExchangeRateService.current_price
     .nav
       - if current_user
         = link_to offers_path, class: "item #{'active' if @section == :offers}" do
