allow trade request to be set with currency

--- a/app/views/public/trade_request.html.haml
+++ b/app/views/public/trade_request.html.haml
@@ -17,7 +17,7 @@
   This person wants a
   = "#{@trade_request.profit}%"
   profit so the current sale price is
-  = number_to_currency @trade_request.sale_price
+  = @trade_request.sale_price
 %p
   The trade location is:
   = @trade_request.location
