--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -35,7 +35,7 @@
               .fa.fa-usd.fa-lg
             = link_to trade_requests_path, class: "item #{'active' if @section == :trade_requests}" do
               .fa.fa-street-view.fa-lg
-            = link_to account_index_path, class: "item #{'active' if @section == :account}" do
+            = link_to account_path, class: "item #{'active' if @section == :account}" do
               .fa.fa-briefcase.fa-lg
           - else
             = link_to new_user_session_path, class: 'item' do
@@ -51,7 +51,9 @@
             .fa.fa-search.fa-lg
         .price
           %span.price-description 1 Dash =
-          = number_to_currency ExchangeRateService.current_price
+          - currency = current_user.present? ? current_user.currency : 'usd'
+          - price = ExchangeRateService.current_price(currency)
+          = MoneyService.format(price, currency)
     .nav
       - if current_user
         = link_to offers_path, class: "item #{'active' if @section == :offers}" do
@@ -60,7 +62,7 @@
         = link_to trade_requests_path, class: "item #{'active' if @section == :trade_requests}" do
           .fa.fa-street-view.fa-lg
           Trade Requests
-        = link_to account_index_path, class: "item #{'active' if @section == :account}" do
+        = link_to account_path, class: "item #{'active' if @section == :account}" do
           .fa.fa-briefcase.fa-lg
           Account
       - else
