bugfix - double-formatted prices

--- a/app/views/public/search.html.haml
+++ b/app/views/public/search.html.haml
@@ -38,4 +38,4 @@
         .info
           = trade_request.intention
         .info
-          = number_to_currency trade_request.sale_price
+          = trade_request.sale_price
