--- a/app/views/public/user_profile.html.haml
+++ b/app/views/public/user_profile.html.haml
@@ -24,5 +24,5 @@
         .name= trade_request.name
         .info= trade_request.location
         .info= trade_request.intention
-        .info= number_to_currency trade_request.sale_price
+        .info= trade_request.sale_price
 
