--- a/app/assets/stylesheets/application/modules/table-list.sass
+++ b/app/assets/stylesheets/application/modules/table-list.sass
@@ -29,6 +29,8 @@
         position: absolute
         top: 22px
         right: 0
+        width: 16px
+        height: 13px
         cursor: pointer
       .action-list
         display: none
