--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,10 +1,15 @@
-%h2 Resend confirmation instructions
+%h1 Resend confirmation instructions
+
+%hr
+
 = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
   = devise_error_messages!
+
   .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
+    = f.label :username
+    = f.text_field :username, autofocus: true, value: resource.username
+
   .actions
     = f.submit "Resend confirmation instructions"
+
 = render "devise/shared/links"
