support resending confirmation email

--- a/app/views/devise/unlocks/new.html.haml
+++ b/app/views/devise/unlocks/new.html.haml
@@ -7,7 +7,7 @@
 
   .field
     = f.label :username
-    = f.text_field :email, autofocus: true
+    = f.text_field :username, autofocus: true
 
   .actions
     = f.submit "Resend unlock instructions"
